<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >


	<LinearLayout  
          android:id="@+id/login_div"  
          android:layout_width="fill_parent"  
          android:layout_height="fill_parent"  
          android:padding="15dip"  
          android:layout_margin="15dip"  
          android:orientation="vertical" 
          > 
        <!-- username -->
        <LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
	        <TextView  
		        android:id="@+id/login_user_input"  
		        android:layout_width="wrap_content"  
		        android:layout_height="wrap_content"  
		        android:layout_alignParentTop="true"  
		        android:layout_marginTop="5dp"  
		        android:text="@string/login_label_username"  
	        /> 
	        
			<EditText  
		        android:id="@+id/username_edit"  
		        android:layout_width="fill_parent"  
		        android:layout_height="wrap_content"  
		        android:hint="@string/login_username_hint"  
		        android:singleLine="true"  
		        android:inputType="text"/> 
		</LinearLayout>
	        
		<!-- password -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
			<TextView  
		     android:id="@+id/login_password_input"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_below="@id/username_edit"  
		     android:layout_marginTop="3dp"  
		     android:text="@string/login_label_password"  
		     /> 
		      
			<EditText  
			     android:id="@+id/password_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content"  
			     android:hint="@string/login_password_hint"  
			     android:password="true"  
			     android:singleLine="true"  
			     android:inputType="textPassword"  
			/> 
		</LinearLayout>
		
		<!-- reinput password -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
		
			<TextView  
		     android:id="@+id/login_mail_reinput"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_marginTop="3dp" 
		     android:text="@string/login_label_password_reinput"  
		     /> 
		      
			<EditText  
			     android:id="@+id/password_reinput_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content" 
			     android:hint="@string/login_password_reinput_hint" 
			     android:singleLine="true"  
			     android:inputType="textPassword"  
			/>
		</LinearLayout>
		
		<!-- mail -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
			<TextView  
		     android:id="@+id/login_mail_input"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_marginTop="3dp"  
		     android:text="@string/login_label_mail"  
		     /> 
		      
			<EditText  
			     android:id="@+id/mail_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content" 
			     android:hint="@string/login_mail_hint" 
			     android:singleLine="true"  
			/> 		
		</LinearLayout>
		
		<!-- firstname -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
			<TextView  
		     android:id="@+id/login_firstname_input"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_marginTop="3dp"		     
		     android:text="@string/login_label_firstname"  
		     /> 
		      
			<EditText  
			     android:id="@+id/firstname_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content" 
			     android:hint="@string/login_firstname_hint"  
			     android:singleLine="true"   
			/> 
		</LinearLayout>
		
		<!-- lastname -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
			<TextView  
		     android:id="@+id/login_lastname_input"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_marginTop="3dp"  
		     android:text="@string/login_label_lastname"  
		     /> 
		      
			<EditText  
			     android:id="@+id/lastname_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content" 
			     android:hint="@string/login_lastname_hint"  
			     android:singleLine="true"   
			/>
		</LinearLayout>
		
		<!-- sex -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
			<TextView  
		     android:id="@+id/login_sex_input"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_marginTop="3dp"  
		     android:text="@string/login_label_sex"  
		     /> 
		      
			<EditText  
			     android:id="@+id/sex_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content" 
			     android:hint="@string/login_sex_hint" 
			     android:singleLine="true"   
			/>
		</LinearLayout>
		
		<!-- phone -->
		<LinearLayout
		     android:layout_width="fill_parent"
		     android:layout_height="wrap_content"
		     android:orientation="horizontal"  
		     >
			<TextView  
		     android:id="@+id/login_phone_input"  
		     android:layout_width="wrap_content"  
		     android:layout_height="wrap_content"  
		     android:layout_marginTop="3dp"  
		     android:text="@string/login_label_phone"  
		     /> 
		      
			<EditText  
			     android:id="@+id/phone_edit"  
			     android:layout_width="fill_parent"  
			     android:layout_height="wrap_content" 
			     android:hint="@string/login_phone_hint"  
			     android:singleLine="true" 
			     android:phoneNumber="true"/>   
			/> 
		</LinearLayout>
		
		<Button  
	      android:id="@+id/signin_button"  
	      android:layout_width="wrap_content"  
	      android:layout_height="wrap_content"  
	      android:text="@string/login_label_signin"  
		/>  
	</LinearLayout>	

	
</RelativeLayout>
